3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:


Changes for 1.11.0:
------------------------------------------------------------------------------
Fix for bug 1850524 - SDL clients crash when entering boat.  Bogus scroll
values were being sent on mapscroll, but only the SDL client did anything
with the mapscroll variables, so only it saw problems.
---
server/apply.c: Store away player x and y positions so we
  can do proper comparisions.  Move update of applier values out of
  if coordinates are different, since those need to get updated in all
  cases.
MSW 2008-01-27	

Fix buffer overflows in get_ob_diff(). Introduce a new module stringbuffer
which implements a buffer that can hold variable-sized strings.
Andreas Kirschbaum 2008-01-12

Make 'player quits the game' in the same style as entered/leave messages.
 server/player.c
Nicolas Weeger 2008-01-07

Handle invalid file descriptors more gracefully.
 socket/init.c: reset a file descriptor when closing it.
 socket/loop.c: try to look up bad file descriptors and drop them.
Nicolas Weeger 2008-01-04

Win32 compilation fixes.
 common/logger.c: typo.
 include/win32.h: #define sleep.
 plugins/cfanim/include/cfanim_proto.h: missing CF_PLUGIN.
 plugins/cfpython/cfpython_object.c: variables must be declared before any instruction.
 plugins/common/hashtable.c: header fixes.
 random_maps/floor.c: variables must be declared before any instruction.
Nicolas Weeger 2008-01-03

Add Object.NoDamage and Object.RandomMovement to Python Crossfire Object.
 plugins/cfpython/cfpython_object.c
 plugins/cfpython/include/cfpython_object_private.h
Nicolas Weeger 2007-12-16

Fix 0 destination coordinates warning for final exit of random maps.